--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/templatemo-nomad-force.css",
-              "src/assets/css/aos.css"
+              "node_modules/aos/dist/aos.css",
+              "src/assets/css/style.css"
             ],
-            "scripts": []
+            "scripts": [ "node_modules/aos/dist/aos.js"]
           },
           "configurations": {
             "production": {
