--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@popperjs/core": "^2.10.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "html-to-pdfmake": "^2.4.0",
     "jquery": "^3.6.0",
+    "pdfmake": "^0.2.5",
+    "pdfmake-wrapper": "^2.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
