--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "aos": "^2.3.4",
+    "bn-ng-idle": "^2.0.1",
     "bootstrap": "^5.1.3",
     "html-to-pdfmake": "^2.4.0",
     "jquery": "^3.6.0",
