--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aos": "^2.3.4",
     "bn-ng-idle": "^2.0.1",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "html-to-pdfmake": "^2.4.0",
     "jquery": "^3.6.0",
     "pdfmake": "^0.2.5",
