--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,21 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/templatemo-nomad-force.css",
               "node_modules/aos/dist/aos.css",
-              "src/assets/css/style.css"
+              "src/assets/css/style.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
-            "scripts": [ "node_modules/aos/dist/aos.js"]
+            "scripts": [ "node_modules/aos/dist/aos.js",
+            "node_modules/jquery/dist/jquery.js",
+            "node_modules/datatables.net/js/jquery.dataTables.js",
+            "node_modules/jszip/dist/jszip.js",
+            "node_modules/datatables.net-buttons/js/dataTables.buttons.js",
+            "node_modules/datatables.net-buttons/js/buttons.colVis.js",
+            "node_modules/datatables.net-buttons/js/buttons.flash.js",
+            "node_modules/datatables.net-buttons/js/buttons.html5.js",
+            "node_modules/datatables.net-buttons/js/buttons.print.js"
+          
+          ]
+
           },
           "configurations": {
             "production": {
