--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "angular-datatables": "^13.0.0",
     "aos": "^2.3.4",
     "bn-ng-idle": "^2.0.1",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
+    "datatables.net": "^1.12.1",
+    "datatables.net-buttons": "^2.2.3",
+    "datatables.net-buttons-dt": "^2.2.3",
+    "datatables.net-dt": "^1.12.1",
     "html-to-pdfmake": "^2.4.0",
     "jquery": "^3.6.0",
+    "jszip": "^3.10.1",
     "pdfmake": "^0.2.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -38,7 +44,10 @@
     "@angular-devkit/build-angular": "~13.3.5",
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/datatables.net": "^1.10.23",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
