--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,31 @@
 {
-  "version": "2.1.0",
-  "fecha": "2025-04-22"
+  "version": "2.2.1",
+  "fecha": "2025-04-29",
+  "caracteristicas": [
+    {
+      "caract1": "Existencias por almacén",
+      "descripcion": "Se agrega consulta de existencias de PT, solo para asesores",
+      "enabled": true
+    },
+    {
+      "caract2": "Ocultar boton 'Imprimir PDF'",
+      "descripcion": "Comenté etiquetas HTML que presentan botón para imprimir PDF en todos los servicios",
+      "enabled": true
+    },
+    {
+      "caract2": "Ajustes menores a Relación de Pedidos",
+      "descripcion": "Controlar mensaje 'No se encontraron registros'",
+      "enabled": true
+    },
+    {
+      "caract3": "Ajustes a descarga de CFDIS",
+      "descripcion": "Se completan temas pendientes y se revisa el HTML",
+      "enabled": true
+    },
+    {
+      "caract4": "almacenes | almacenes.filtros | almacenes.service",
+      "descripcion": "Se crean modelos y servicio para cargar almacenes",
+      "enabled": true
+    }
+  ]
 }
