Consulta de Pedidos Detalle - primera iteracion
1. Se modifica la presentación de los artículos incluidos en el pedido seleccionado por el usuario. En vez de una ventana modal, se presentan en un container de la pagina principal.
2. Se depuran columnas y se descarta tabla de pedidos a producción.
3. Se agrega formulario modal para presentar medidas con piezas solicitadas.

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,10 +1,10 @@
 {
-  "version": "2.3.0",
-  "fecha": "2025-05-08",
+  "version": "2.3.1",
+  "fecha": "2025-05-13",
   "caracteristicas": [
     {
-      "caract1": "Consulta de Pedidos",
-      "descripcion": "Detalles en Control-de-Cambios.md",
+      "caract1": "Consulta de Pedidos DETALLE",
+      "descripcion": "Detalles en 'Control-de-Cambios.md'",
       "enabled": true
     }
   ]
