--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,9 +1,9 @@
 {
-  "version": "2.7.0",
-  "fecha": "2025-07-10",
+  "version": "2.8.0",
+  "fecha": "2025-07-15",
   "caracteristicas": [
     {
-      "caract1": "Formularo para Cotizaciones",
+      "caract1": "Reporte Catálogo de Artículos",
       "descripcion": "Detalles en 'Control-de-Cambios.md'",
       "enabled": true
     }
