--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,9 +1,9 @@
 {
-  "version": "2.10.0",
-  "fecha": "2025-07-29",
+  "version": "2.11.1",
+  "fecha": "2025-08-08",
   "caracteristicas": [
     {
-      "caract1": "Reporte de Prepedidos",
+      "caract1": "Indicadores de Venta 2025",
       "descripcion": "Detalles en 'Control-de-Cambios.md'",
       "enabled": true
     }
