--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,9 +1,9 @@
 {
-  "version": "2.11.1",
-  "fecha": "2025-08-08",
+  "version": "2.12.0",
+  "fecha": "2025-08-12",
   "caracteristicas": [
     {
-      "caract1": "Indicadores de Venta 2025",
+      "caract1": "Ajustes al Reporte de Prepedidos",
       "descripcion": "Detalles en 'Control-de-Cambios.md'",
       "enabled": true
     }
