ajustes registro de versión

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,9 +1,9 @@
 {
-  "version": "2.13.1",
-  "fecha": "2025-08-28",
+  "version": "2.13.2",
+  "fecha": "2025-08-29",
   "caracteristicas": [
     {
-      "caract1": "MOdificación de Cotizaciones",
+      "caract1": "Ajustes módulo de Cotizaciones",
       "descripcion": "Detalles en 'Control-de-Cambios.md'",
       "enabled": true
     }
