--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,9 +1,9 @@
 {
-  "version": "2.14.0",
-  "fecha": "2025-09-12",
+  "version": "2.15.0",
+  "fecha": "2025-11-01",
   "caracteristicas": [
     {
-      "caract1": "Presentación de imagenes en catálogo de artículos",
+      "caract1": "Se modifica estilo del Heroe y se oculta sección Nosotros",
       "descripcion": "Detalles en 'Control-de-Cambios.md'",
       "enabled": true
     }
